--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>New Year Celebration - Gokulakannan M</title>
+        <title>Happy New Year</title>
 
         <!-- Bootstrap 5 CSS -->
         <link
