Update year in New Year message to 2026

--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@
                         <div class="new-year-text" id="newYearText">
                             Happy New Year!✨✨
                             <span class="year-number"
-                                id="yearNumber">2025💫</span>
+                                >2026💫</span>
                             <p class="text-white">Cheers to new beginnings!
                                 🥂</p>
                         </div>
